Adding the webrtc thing heere

--- a/server/test.html
+++ b/server/test.html
@@ -338,7 +338,7 @@
             }
 
             // Connect to Socket.IO server
-            socket = io('http://localhost:3000', {
+            socket = io('https://metorship-app.onrender.com', {
                 auth: { token },
                 transports: ['websocket']
             });
